--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Build artifacts
+build/
+
 # Logs
 logs
 *.log
@@ -33,9 +36,6 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
-
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
 
 # Dependency directories
 node_modules/
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VSCode workspace settings
+.vscode/
