--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
   "overrides": [
     {
@@ -7,6 +7,10 @@
       "options": {
         "parser": "typescript"
       }
+    },
+    {
+      "files": ".prettierrc",
+      "options": { "parser": "json" }
     }
   ]
 }
