--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "url": "git+https://github.com/Bakeka/backend.git"
   },
   "engines": {
-    "node": ">= 16.13 <17"
+    "node": ">= 18 <19"
   },
   "scripts": {
     "start": "node build/src/app.js",
-    "build": "tsc -p tsconfig.json",
-    "build:watch": "tsc -w -p tsconfig.json"
+    "build": "esbuild app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js",
+    "build:watch": "esbuild app.ts --bundle --watch --platform=node --target=node18 --outfile=build/app.js"
   },
   "dependencies": {
     "express": "^4.18.1"
@@ -27,8 +27,11 @@
     "@types/node": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "esbuild": "^0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   }
