--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
-  "name": "bakeka-backend",
-  "author": "Bakeka",
-  "license": "AGPL-3.0-or-later",
-  "version": "0.0.1",
-  "description": "The backend monolith for Bakeka",
-  "homepage": "https://github.com/Bakeka/backend",
-  "bugs": {
-    "url": "https://github.com/Bakeka/backend/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bakeka/backend.git"
-  },
-  "engines": {
-    "node": ">= 18 <19"
-  },
+  "name": "test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "schema.js",
   "scripts": {
-    "start": "node build/src/app.js",
-    "build": "esbuild app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js",
-    "build:watch": "esbuild app.ts --bundle --watch --platform=node --target=node18 --outfile=build/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start_local": "node -r dotenv/config index.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "esbuild": "^0.14.39",
-    "eslint": "^8.15.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
   }
 }
