--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "schema.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start_local": "node -r dotenv/config index.js"
+    "start": "node schema.js",
+    "start_local": "node -r dotenv/config schema.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "type": "module"
 }
