--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "module": "ES2020",
     "lib": ["ES2020"],
     "moduleResolution": "node",
-    "rootDir": ".",
+    "rootDir": "src",
     "outDir": "build",
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "noFallthroughCasesInSwitch": true,
