--- a/package.json
+++ b/package.json
@@ -4,14 +4,31 @@
   "description": "",
   "main": "schema.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node schema.js",
-    "start_local": "node -r dotenv/config schema.js"
+    "docker": "yarn build && docker-compose up --build",
+    "start": "node build/app.js bakeka.config.json",
+    "build": "esbuild src/app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js && tsc --emitDeclarationOnly --declaration --project tsconfig.json",
+    "build:watch": "esbuild src/app.ts --bundle --watch --platform=node --target=node18 --outfile=build/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "class-transformer": "^0.5.1",
+    "class-transformer-validator": "^0.9.1",
+    "class-validator": "^0.13.2",
+    "express": "^4.18.1",
+    "mongodb": "^4.6.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "esbuild": "^0.14.39",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
+  }
 }
