--- a/package.json
+++ b/package.json
@@ -18,27 +18,36 @@
   "scripts": {
     "docker": "yarn build && docker-compose up --build",
     "start": "node build/app.js bakeka.config.json",
-    "build": "esbuild src/app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js && tsc --emitDeclarationOnly --declaration --project tsconfig.json",
-    "build:watch": "esbuild src/app.ts --bundle --watch --platform=node --target=node18 --outfile=build/app.js"
+    "build": "tsoa spec-and-routes -c tsoaconfig.json && esbuild src/app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js && tsc --emitDeclarationOnly --declaration --project tsconfig.json",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes -c tsoaconfig.json\""
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "class-transformer": "^0.5.1",
     "class-transformer-validator": "^0.9.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "swagger-ui-express": "^4.4.0",
+    "tsoa": "^4.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.33",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "concurrently": "^7.2.1",
     "esbuild": "^0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
+    "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   }
 }
