--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,9 @@ services:
   bakeka:
     container_name: bakeka_backend
     build: .
+    depends_on:
+      - mongodb
+    ports:
+      - 8080
     environment:
       BKK_DB_HOST: mongodb
