--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "swagger-ui-dist": "^4.11.1",
     "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0"
   },
