--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "class-transformer": "^0.5.1",
-    "class-transformer-validator": "^0.9.1",
-    "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "swagger-ui-dist": "^4.11.1",
-    "swagger-ui-express": "^4.4.0",
+    "redoc-express": "^1.0.0",
     "tsoa": "^4.1.0"
   },
   "devDependencies": {
