--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,9 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "rules": {}
+  "rules": {},
+  "ignorePatterns": [
+    "/**/*.js",
+    "routes.ts"
+  ]
 }
