--- a/package.json
+++ b/package.json
@@ -18,30 +18,29 @@
   "scripts": {
     "docker": "yarn build && docker-compose up --build",
     "start": "node build/app.js bakeka.config.json",
-    "build": "tsoa spec-and-routes -c tsoaconfig.json && esbuild src/app.ts --bundle --minify --sourcemap --platform=node --target=node18 --outfile=build/app.js && tsc --emitDeclarationOnly --declaration --project tsconfig.json",
-    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes -c tsoaconfig.json\""
+    "build": "tsoa spec-and-routes && tsc -p tsconfig.json",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\""
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "redoc-express": "^1.0.0",
+    "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
-    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.33",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.2.1",
-    "esbuild": "^0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
-    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.0",
