Now using a simple services architecture and dependency injection, renamed files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     /* Advanced Options */
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": [
+      "reflect-metadata"
+    ]
   }
 }
