--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "swagger-ui-express": "^4.4.0",
-    "tsoa": "^4.1.0"
+    "tsoa": "^4.1.0",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
