--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   mongodb:
     container_name: mongodb
     image: mongo:4.4
+    ports:
+      - 27017
 
   bakeka:
     container_name: bakeka_backend
@@ -12,3 +14,4 @@ services:
       - 8080:8080
     environment:
       BKK_DB_HOST: mongodb
+      BKK_DB_PORT: 27017
