--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "node": ">= 18 <19"
   },
   "scripts": {
-    "docker": "yarn build && docker-compose up --build",
     "start": "node build/app.js bakeka.config.json",
     "build": "tsoa spec-and-routes && tsc -p tsconfig.json",
-    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\""
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
+    "dev:stack": "cross-env BKK_DB_PORT=27017 concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\" \"docker run --name mongodb --rm -d -p 27017:27017 mongo:4.4\" && docker stop mongodb",
+    "stack": "docker-compose up --build"
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "mongoose": "^6.3.4",
     "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0",
     "tsyringe": "^4.6.0"
@@ -38,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.2.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
