--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "stack": "docker-compose up --build"
   },
   "dependencies": {
+    "@abraham/reflection": "^0.10.0",
     "@types/multer": "^1.4.7",
-    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
@@ -33,7 +33,6 @@
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
     "@types/swagger-ui-express": "^4.1.3",
