--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true,
     "types": [
-      "reflect-metadata"
+      "@abraham/reflection"
     ]
   }
 }
