Reverted to reflect-metadata to fix broken build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true,
     "types": [
-      "@abraham/reflection"
+      "reflect-metadata"
     ]
   }
 }
