--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "ext": "ts"
   },
   "dependencies": {
-    "@abraham/reflection": "^0.10.0",
     "@typegoose/typegoose": "^9.8.1",
     "@types/cors": "^2.8.12",
     "@types/multer": "^1.4.7",
@@ -41,6 +40,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0",
     "tsyringe": "^4.6.0"
