--- a/oas3.yaml
+++ b/oas3.yaml
@@ -5,8 +5,55 @@ components:
   requestBodies: {}
   responses: {}
   schemas:
-    Types.ObjectId:
-      type: string
+    Numbers:
+      properties:
+        OBITUARY:
+          type: number
+          format: double
+        POLITICS:
+          type: number
+          format: double
+        NOTICE:
+          type: number
+          format: double
+        PUBLIC:
+          type: number
+          format: double
+        OTHER:
+          type: number
+          format: double
+      type: object
+      description: >-
+        Type Numbers contains the total number of board registered for each
+        `Type`.
+    Point:
+      description: >-
+        Type Point represents a [GeoJSON
+        point](https://www.mongodb.com/docs/manual/reference/geojson/#point).
+      properties:
+        type:
+          type: string
+          enum:
+            - Point
+          nullable: false
+          description: GeoJSON type. Is always "Point".
+          default: Point
+        coordinates:
+          items:
+            type: number
+            format: double
+          type: array
+          description: >-
+            GeoJSON coordinates. Longitude is the first element and latitude
+            follows.
+          example:
+            - -103.4
+            - -45.7
+          default: []
+          minItems: 2
+          maxItems: 2
+      type: object
+      additionalProperties: false
     Accessibility:
       description: >-
         Enum Accessibility represents a board's physical environment and
@@ -44,28 +91,18 @@ components:
     Board:
       description: Type Board represents a bulletin board.
       properties:
-        _id:
-          $ref: '#/components/schemas/Types.ObjectId'
-          description: Internal identifier for the board.
-          example: 507c7f79bcf86cd7994f6c0e
-        latitude:
-          type: number
-          format: float
+        location:
+          $ref: '#/components/schemas/Point'
           description: >-
-            Latitude coordinate of the board. Has to be between `-90.0` and
-            `90.0`.
-          example: -45.7
-          minimum: -90
-          maximum: 90
-        longitude:
-          type: number
-          format: float
-          description: >-
-            Longitude coordinate of the board. Has to be between `-180.0` and
-            `180.0`.
-          example: -103.4
-          minimum: -180
-          maximum: 180
+            Board position as GeoJSON Point (see
+
+            [geospatial
+            queries](https://www.mongodb.com/docs/upcoming/geospatial-queries/)
+
+            and [type
+            definition](https://www.mongodb.com/docs/manual/reference/geojson/)).
+
+            Longitude is the first element and latitude follows.
         accessibility:
           $ref: '#/components/schemas/Accessibility'
           description: Board accessibility.
@@ -92,16 +129,6 @@ components:
           type: string
           format: date-time
           description: Board last modification date.
-      required:
-        - latitude
-        - longitude
-        - accessibility
-        - material
-        - size
-        - traffic
-        - type
-        - created
-        - modified
       type: object
       additionalProperties: false
     Filter:
@@ -139,8 +166,8 @@ components:
           maxItems: 3
         traffic:
           items:
-            type: integer
-            format: int32
+            type: number
+            format: double
           type: array
           description: 'Filter the results'' traffic amount, if defined.'
           example:
@@ -157,55 +184,29 @@ components:
             - OBITUARY
             - PUBLIC
           maxItems: 5
-        latitude:
+        box:
           items:
-            type: number
-            format: double
+            items:
+              type: number
+              format: double
+            type: array
           type: array
-          description: Minimum and maximum latitudes for the results.
+          description: >-
+            Longitude and latitude "box" for the results. All boards returned
+            will be
+
+            located inside this box. Each of the array items is the tuple
+
+            `[longitude, latitude]`, akin to GeoJSON points.
           example:
-            - -45.7
-            - 23.2
+            - - -103.4
+              - -45.7
+            - - 95.8
+              - 23.2
           minItems: 2
           maxItems: 2
-          minimum: -90
-          maximum: 90
-        longitude:
-          items:
-            type: number
-            format: double
-          type: array
-          description: Minimum and maximum latitudes for the results.
-          example:
-            - -103.4
-            - 95.8
-          minItems: 2
-          maxItems: 2
-          minimum: -180
-          maximum: 180
       type: object
       additionalProperties: false
-    Numbers:
-      properties:
-        OBITUARY:
-          type: number
-          format: double
-        POLITICS:
-          type: number
-          format: double
-        NOTICE:
-          type: number
-          format: double
-        PUBLIC:
-          type: number
-          format: double
-        OTHER:
-          type: number
-          format: double
-      type: object
-      description: |-
-        Type Numbers contains the total number of board registered for each
-        {@link Type}.
   securitySchemes: {}
 info:
   title: bakeka-backend
@@ -217,6 +218,23 @@ info:
     name: Bakeka
 openapi: 3.0.0
 paths:
+  /boards/numbers:
+    get:
+      operationId: GetNumbers
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Numbers'
+      description: >-
+        Returns the total number of board registered for each type (see enum
+        Type).
+      tags:
+        - Boards
+      security: []
+      parameters: []
   /boards:
     post:
       operationId: FilterBoards
@@ -234,6 +252,8 @@ paths:
         properties
 
         of the filter is `undefined`, it will not be applied to the results.
+      tags:
+        - Boards
       security: []
       parameters: []
       requestBody:
@@ -253,8 +273,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Board'
+                allOf:
+                  - $ref: '#/components/schemas/Board'
+                nullable: true
       description: Retrieves a single board by its internal ID.
+      tags:
+        - Boards
       security: []
       parameters:
         - description: The board's identifier
@@ -266,9 +290,22 @@ paths:
     post:
       operationId: UpdateBoard
       responses:
-        '204':
-          description: No content
-      description: Updated a single board by its internal ID.
+        '201':
+          description: Created
+      description: >-
+        Updated a single board by its internal ID. All
+
+        `undefined` fields in the incoming object will be ignored. Validation is
+
+        performed on the data as follows:
+
+        - Enums are checked against their representation in code
+
+        - `location` has to be a valid GeoJSON Point **and** no further than 500
+        metres
+          from the original board
+      tags:
+        - Boards
       security: []
       parameters:
         - description: The board's identifier
@@ -285,20 +322,5 @@ paths:
             schema:
               $ref: '#/components/schemas/Board'
               description: The new board object
-  /boards/numbers:
-    get:
-      operationId: GetNumbers
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Numbers'
-      description: >-
-        Returns the total number of board registered for each type (see enum
-        Type).
-      security: []
-      parameters: []
 servers:
   - url: /api/v1
